--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -25,7 +25,7 @@
 .header__searchIcon {
     padding: 5px !important;
     height: 22px !important;
-    background-color: #cd9042;
+    background-color: #add4e6;
 }
 
 .header__searchInput {
