--- a/src/css/LogIn.css
+++ b/src/css/LogIn.css
@@ -47,7 +47,7 @@
 }
 
 .login__signInButton {
-    background: #DAA520;
+    background: #add4e6;
     border-radius: 2px;
     width: 100%;
     height: 30px;
