--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -20,7 +20,7 @@
 }
 
 .product > button {
-  background: #f0c14b;
+  background: #add4e6;
   border: 1px solid;
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
